# tomlize

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: valdiate.yaml
src/tomlize/: __init__.py  cli.py  converter.py  exceptions.py  main.py  merger.py
src/tomlize/loaders/: __init__.py  setup_py.py  setuptools_mapping.py
src/tomlize/setup_py/: __init__.py  reader.py  remover.py  transformer.py
tests/: utils.py
tests/end2end/: test_setup_py.py
tests/loaders/: test_setup_py.py
tests/unit/: test_converter.py  test_merger.py  test_pyproject_toml_output.py  test_remove_code.py  test_setup_py.py
